Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/021_expected_2_given3.xi
f(): int, int, int

g()
{
    x:int, y:int = f()
}
//@PRACOWNIA
//@should_not_typecheck
